<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content">
    <item
        android:id="@+id/song_play"
        android:title="@string/play_title"/>
    <item
        android:id="@+id/song_rename"
        android:title="@string/rename"/>
    <item
        android:id="@+id/song_delete"
        android:title="@string/delete"/>
    <item
        android:id="@+id/song_album"
        android:title="@string/change_album_title"/>
    <item
        android:id="@+id/song_artist"
        android:title="@string/change_artist_title"/>
    <item
        android:id="@+id/song_playlist"
        android:title="@string/to_playlist_title"/>
    <item
        android:id="@+id/add_to_queue"
        android:title="@string/to_queue_title"/>
</menu>