<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:src="@color/white">
    <item
        android:id="@+id/share"
        android:title=""
        android:icon="@drawable/ic_action_share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/equalizer"
        android:title=""
        android:icon="@drawable/ic_action_equalizer"
        app:showAsAction="always"/>
    <item
        android:id="@+id/play_all"
        android:title="@string/shuffle_all_title"/>
    <item
        android:id="@+id/sort"
        android:title="@string/sort_by">
        <menu>
            <item
                android:id="@+id/a_to_z"
                android:title="@string/sort_a_to_z"/>
            <item
                android:id="@+id/z_to_a"
                android:title="@string/sort_z_to_a"/>
            <item
                android:id="@+id/album_name"
                android:title="@string/sort_by_album"/>
            <item
                android:id="@+id/artist_name"
                android:title="@string/sort_by_artist"/>
            <item
                android:id="@+id/duration"
                android:title="@string/sort_by_duration"/>
        </menu>
    </item>
    <item
        android:id="@+id/go_to_artist"
        android:title="@string/go_to_artist"/>
    <item
        android:id="@+id/go_to_album"
        android:title="@string/go_to_album"/>
</menu>