<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/overflow"
        android:title=""
        android:icon="@drawable/ic_overflow_bar"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/remove_from_queue"
                android:title="@string/remove_from_queue"
                app:showAsAction="never"/>
            <item
                android:id="@+id/add_to_playlist"
                android:title="@string/to_playlist_title"
                app:showAsAction="never"/>
            <item
                android:id="@+id/create_playlist"
                android:title="@string/create_playlist_title"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>